# wbudowane

./: .gitignore  CPUlator ARMv7 System Simulator.url  README.md  definitions.h  example.c  fpga-ffrontend.py  hello_ucosii.c  lab2.c  lab3.c  lab4.c  lab4_v2 sim.c  lab4_v2.c  lab5.c  lab5_v2.c  lab5_v2_sim.c  lab6_sim.c  lab7.c  readme.md  testy.c
Projekt/: CMakeLists.txt  README.md
Projekt-SystemC/: Project.cpp  Projekt-SystemC.aps  Projekt-SystemC.cpp  Projekt-SystemC.sln  Projekt-SystemC.vcxproj  Projekt-SystemC.vcxproj.filters  WegrzynZurekSysWbudowane.cpp  cpp.hint  resource.h
dosymulacji/: Computer_System.qsys  DE1_SoC_Computer.done  DE1_SoC_Computer.fit.summary  DE1_SoC_Computer.flow.rpt  DE1_SoC_Computer.ipregen.rpt  DE1_SoC_Computer.map.smsg  DE1_SoC_Computer.map.summary  DE1_SoC_Computer.qsf  DE1_SoC_Computer.qws
dosymulacji/.qsys_edit/: preferences.xml
dosymulacji/Computer_System/: Computer_System.html  Computer_System_generation.rpt  (+1 more)
lab01-baza/: LAB01SYSWBUDOWANE.bsf  LAB01SYSWBUDOWANE.cmp  LAB01SYSWBUDOWANE.csv  LAB01SYSWBUDOWANE.html  LAB01SYSWBUDOWANE.qpf  LAB01SYSWBUDOWANE.qsf  LAB01SYSWBUDOWANE.qsys  LAB01SYSWBUDOWANE.qws  LAB01SYSWBUDOWANE.sopcinfo  LAB01SYSWBUDOWANE.spd  LAB01SYSWBUDOWANE.xml  LAB01SYSWBUDOWANE_bb.v  LAB01SYSWBUDOWANE_generation.rpt.1  LAB01SYSWBUDOWANE_generation_previous.rpt  LAB01SYSWBUDOWANE_inst.v  LAB01SYSWBUDOWANE_inst.vhd  LAB01SYSWBUDOWANE_inst.vhd.bak  unsaved.html  unsaved_generation.rpt
microC-OSII-baza/: SyswbLab1.qpf  SyswbLab1.qsf  SyswbLab1.qsys  SyswbLab1.qws  SyswbLab1.sopcinfo  lab2.c  lab3.c
(+2629 files in other folders)
